# brioche-pack

./: Cargo.toml
src/: autowrap.rs  encoding.rs  lib.rs  resources.rs
