[package]
name = "brioche-pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
bstr = { version = "1.8.0", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
goblin = "0.7.1"
pathdiff = "0.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
thiserror = "1.0.51"
ulid = "1.1.0"
urlencoding = "2.1.3"
userland-execve = { git = "https://github.com/brioche-dev/userland-execve-rust.git" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
